# Deterministic-Finite-Automaton-Minimize

./: .gitignore  CMakeLists.txt  README.md
dataDFA/: entrada02.txt  entrada03.txt  entrada04.txt  machine.dfa
src/: main.c
src/Graph/: grapMaker.h  graphMaker.c  machine.dfa
src/Myhill-Nerode/: minimization.c  minimization.h
src/Threading/: threading.c  threading.h  wait_group.c  wait_group.h
src/dataDFA/: entrada01.txt  entrada03.txt
src/dictionary/: dictionary.c  dictionary.h  value.c  value.h
src/input/: input.c  input.h
src/machine/: machine.h
src/testeGrafos/: grafo  grafo.c  testeGrafo  testeGrafo.c  testeGrafoV2  testeGrafoV2.c
